<resources>
    <string name="app_name">ToDoList</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_new">New Task</string>
    <string name="action_twitter">Share via Twitter</string>
    <string name="action_sms">Share via SMS</string>
    <string name="splash">To-Do List</string>
    <string name="action_refresh">Refresh</string>
    <string name="title_activity_edit_task">Add/Edit</string>
    <string name="task_title_hint">Title</string>
    <string name="task_content_hint">Content</string>
    <string name="save_button">Save</string>
    <string name="edit_error_title">Error!</string>
    <string name="edit_error_message">You cannot save a task without a title</string>
    <string name="title_activity_login">Login</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="email_hint">Email</string>
    <string name="sign_up_button_label">Sign Up</string>
    <string name="signup_error_message">Please make sure you enter a username, password, and email address!</string>
    <string name="signup_error_title">Error!</string>
    <string name="login_error_message">Please make sure you enter a username and password!</string>
    <string name="login_error_title">Error!</string>
    <string name="login_button_label">Login</string>
    <string name="sign_up_text">Not registered? Sign up!</string>
    <string name="title_activity_sign_up">Sign Up</string>
    <string name="logout_label">Logout</string>

</resources>
